bugfix VPP modal covers whole screen (#249)

--- a/assets/css/_properties_panel.scss
+++ b/assets/css/_properties_panel.scss
@@ -17,7 +17,7 @@
 .m-properties-panel__modal-overlay {
   background-color: $modal-overlay-color;
   height: 100%;
-  left: inherit;
+  left: 0;
   position: fixed;
   top: 0;
   width: 100%;
